# -glfw-edu

./: CMakeLists.txt
src/: main.cpp
